unpackaged/main/default/objects/bt_base__Translation__c/bt_base__Translation__c.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>