unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Custom_Content__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Custom_Content__c</fullName>
    <label>Events Custom Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>