unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Custom_Content_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Custom_Content_Name__c</fullName>
    <label>Events Custom Content Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>