unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Category__c</fullName>
    <label>Events Event Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>