unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Checkout_Details__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Checkout_Details__c</fullName>
    <label>Events Event Checkout Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>