unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Content_Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Content_Description__c</fullName>
    <label>Events Event Content Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>