unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Description__c</fullName>
    <label>Events Event Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>