unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_FAQ_Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_FAQ_Category__c</fullName>
    <label>Events Event FAQ Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>