unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_FAQ_Question__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_FAQ_Question__c</fullName>
    <label>Events Event FAQ Question</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>