unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Item_Public_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Item_Public_Item_Name__c</fullName>
    <label>Events Event Item Public Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>