unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Social_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Social_Message__c</fullName>
    <label>Events Event Social Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>