unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Success_Message__c</fullName>
    <label>Events Event Success Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>