unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Event_Title__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Event_Title__c</fullName>
    <label>Events Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>