unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_FAQ_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_FAQ_Category_Name__c</fullName>
    <label>Events FAQ Category Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>