unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_FAQ_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_FAQ_Question_Answer__c</fullName>
    <label>Events FAQ Question Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>