unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_FAQ_Question_Question__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_FAQ_Question_Question__c</fullName>
    <label>Events FAQ Question Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>