unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Form_Element_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Form_Element_Picklist_Values__c</fullName>
    <label>Events Form Element Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>