unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Form_Element_Question_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Form_Element_Question_Rich_Text__c</fullName>
    <label>Events Form Element Question Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>