unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Form_Element_Question_Text_Only__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Form_Element_Question_Text_Only__c</fullName>
    <label>Events Form Element Question Text Only</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>