unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Session_Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Session_Description__c</fullName>
    <label>Events Session Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>