unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Session_Location__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Session_Location__c</fullName>
    <label>Events Session Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>