unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Session_Topic__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Session_Topic__c</fullName>
    <label>Events Session Topic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>