unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Session_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Session_Type__c</fullName>
    <label>Events Session Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>