unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Sponsor_Bio__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Sponsor_Bio__c</fullName>
    <label>Events Sponsor Bio</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>