unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Sponsor_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Sponsor_Display_Name__c</fullName>
    <label>Events Sponsor Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>