unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Sponsor_Tier__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Sponsor_Tier__c</fullName>
    <label>Events Sponsor Tier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>