unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Events_Track_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Track_Name__c</fullName>
    <label>Events Track Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>