unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__FAQ_Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__FAQ_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FAQ Category</label>
    <referenceTo>conference360__FAQ_Category__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>