unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Form_Big_List_Option__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Big_List_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Big List Option</label>
    <referenceTo>conference360__Form_Big_List_Option__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>