unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Form_Big_List_Option_Value__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Big_List_Option_Value__c</fullName>
    <label>Form Big List Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>