unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Keyword_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Keyword_Name__c</fullName>
    <label>Keyword Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>