unpackaged/main/default/objects/bt_base__Translation__c/fields/conference360__Last_Publish_to_Platform_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>conference360__Last_Publish_to_Platform_Requested_At__c</fullName>
    <label>Last Publish to Platform Requested At</label>
    <type>DateTime</type>
</CustomField>